# bare6502

./: .gitignore  CMakeLists.txt  README.md  msbasic.json  test6502.json  test65C02.json
apps/65C02_ft/: 65C02_extended_opcodes_test.lst
apps/msbasic/: bare6502.lbl
include/: bare6502.h  bus.h  device.h  json.h  peripheral.h  ringbuf.h  utils.h
src/: acia.c  bare6502.c  bare6502_opcodes.c  bus.c  device.c  display.c  json.c  main.c  mem.c  ringbuf.c  timer.c
