CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(bare6502)

FIND_PACKAGE(X11 REQUIRED)

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_C_FLAGS_RELEASE "-g0 -Ofast")
SET(CMAKE_C_FLAGS_DEBUG "-g3 -O0")
# SET(CMAKE_C_FLAGS "-Wall -Wextra")
SET(CMAKE_C_FLAGS "")
SET(CMAKE_LINKER_FLAGS "-lX11")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})

FILE(GLOB_RECURSE SRC_FILES "src/*.c")

INCLUDE_DIRECTORIES(include)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${X11_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${X11_INCLUDE_DIR})